--- a/src/MenuApi/appsettings.json
+++ b/src/MenuApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=fasttech_identity;Username=fasttech;Password=fasttech123"
+  }
 }
