--- a/src/MenuApi/MenuApi.csproj
+++ b/src/MenuApi/MenuApi.csproj
@@ -7,6 +7,7 @@
     <UserSecretsId>79962b3a-fc7e-44fd-a72a-7d2837574b98</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
