--- a/src/MenuApi/appsettings.json
+++ b/src/MenuApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=fasttech_identity;Username=fasttech;Password=fasttech123"
+    "DefaultConnection": "Host=postgres_identity;Port=5432;Database=fasttech_identity;Username=fasttech;Password=fasttech123"
   }
 }
