--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,9 +16,33 @@ services:
     networks:
       - fasttech-network
 
+  postgres_menu:
+    image: postgres:latest
+    container_name: postgres_menu
+    environment:
+      POSTGRES_USER: fasttech
+      POSTGRES_PASSWORD: fasttech123
+      POSTGRES_DB: fasttech_menu
+    ports:
+      - "5433:5432"
+    networks:
+      - fasttech-network
+
+  postgres_order:
+    image: postgres:latest
+    container_name: postgres_order
+    environment:
+      POSTGRES_USER: fasttech
+      POSTGRES_PASSWORD: fasttech123
+      POSTGRES_DB: fasttech_order
+    ports:
+      - "5434:5432"
+    networks:
+      - fasttech-network
+
   rabbitmq:
     image: rabbitmq:3-management
-    container_name: fasttech_rabbitmq
+    container_name: rabbitmq
     ports:
       - "5672:5672"   
       - "15672:15672" 
@@ -51,7 +75,7 @@ services:
       - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__DefaultConnection=Host=postgres_identity;Port=5432;Database=fasttech_identity;Username=fasttech;Password=fasttech123
     depends_on:
-      - postgres_identity
+      - postgres_menu
     networks:
       - fasttech-network
 
@@ -64,7 +88,7 @@ services:
       - "5003:8080"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - RabbitMQ__HostName=rabbitmq
+      - RABBITMQ_HOST=rabbitmq
     depends_on:
       - rabbitmq
     networks:
@@ -77,7 +101,7 @@ services:
     container_name: fasttech_orderprocessor
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - RabbitMQ__HostName=rabbitmq
+      - RABBITMQ_HOST=rabbitmq
     depends_on:
       - rabbitmq
     networks:
