--- a/src/OrderProcessor/appsettings.json
+++ b/src/OrderProcessor/appsettings.json
@@ -3,6 +3,6 @@
     "Host": "rabbitmq",
     "Username": "guest",
     "Password": "guest",
-    "QueueName": "pedidos"
+    "QueueName": "pedido_queue"
   }
 }
