--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,6 +25,8 @@ services:
       POSTGRES_DB: fasttech_menu
     ports:
       - "5433:5432"
+    volumes:
+      - ./docker/postgres/data:/var/lib/postgresql/data/menu
     networks:
       - fasttech-network
 
@@ -37,6 +39,8 @@ services:
       POSTGRES_DB: fasttech_order
     ports:
       - "5434:5432"
+    volumes:
+      - ./docker/postgres/data:/var/lib/postgresql/data/order
     networks:
       - fasttech-network
 
@@ -70,8 +74,7 @@ services:
       dockerfile: src/MenuApi/Dockerfile
     container_name: fasttech_menuapi
     ports:
-      - "61621:8080"
-      - "61622:8081"
+      - "5002:8080"
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__DefaultConnection=Host=postgres_menu;Port=5432;Database=fasttech_menu;Username=fasttech;Password=fasttech123
