--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -98,7 +98,73 @@ services:
       - postgres_order
     networks:
       - fasttech-network
+  zabbix-db:
+    image: postgres:latest
+    environment:
+      POSTGRES_USER: zabbix
+      POSTGRES_PASSWORD: zabbix
+      POSTGRES_DB: zabbix
+    volumes:
+      - ./docker/zabbix/db:/var/lib/postgresql/data
+    networks:
+      - fasttech-network
 
+  zabbix-server:
+    image: zabbix/zabbix-server-pgsql:alpine-latest
+    environment:
+      DB_SERVER_HOST: zabbix-db
+      POSTGRES_USER: zabbix
+      POSTGRES_PASSWORD: zabbix
+      POSTGRES_DB: zabbix
+      ZBX_STARTPOLLERS: 5
+    depends_on:
+      - zabbix-db
+    ports:
+      - "10051:10051"
+    volumes:
+      - ./docker/zabbix/server:/var/lib/zabbix
+    networks:
+      - fasttech-network
+
+  zabbix-web:
+    image: zabbix/zabbix-web-nginx-pgsql:alpine-latest
+    environment:
+      DB_SERVER_HOST: zabbix-db
+      POSTGRES_USER: zabbix
+      POSTGRES_PASSWORD: zabbix
+      POSTGRES_DB: zabbix
+      ZBX_SERVER_HOST: zabbix-server
+      PHP_TZ: America/Sao_Paulo
+    depends_on:
+      - zabbix-server
+    ports:
+      - "8085:8080"
+    volumes:
+      - ./docker/zabbix/web:/etc/ssl/nginx
+    networks:
+      - fasttech-network
+
+  zabbix-agent:
+    image: zabbix/zabbix-agent:alpine-latest
+    environment:
+      ZBX_SERVER_HOST: zabbix-server
+    depends_on:
+      - zabbix-server
+    networks:
+      - fasttech-network
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    volumes:
+      - ./docker/grafana/data:/var/lib/grafana
+    depends_on:
+      - zabbix-server
+    networks:
+      - fasttech-network
 networks:
   fasttech-network:
     driver: bridge
