--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,4 +76,18 @@ jobs:
           push: true
           tags: ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-identityapi:latest
 
-      - name: Build
+      - name: Build and push MenuApi image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: src/MenuApi/Dockerfile
+          push: true
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}-menuapi:latest
+
+      - name: Build and push OrderApi image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: src/OrderApi/Dockerfile
+          push: true
+          tags: ${{ env.REGISTRY }}/${{ env.IMAGE_PREFIX }}
