--- a/src/IdentityApi/Dockerfile
+++ b/src/IdentityApi/Dockerfile
@@ -9,8 +9,8 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["IdentityService.csproj", "."]
-RUN dotnet restore "./IdentityService.csproj"
+COPY ["src/IdentityService.csproj", "src/IdentityApi/"]
+RUN dotnet restore "src/IdentityApi/IdentityApi.csproj"
 COPY . .
 WORKDIR "/src/."
 RUN dotnet build "./IdentityService.csproj" -c $BUILD_CONFIGURATION -o /app/build
