--- a/src/IdentityApi/Dockerfile
+++ b/src/IdentityApi/Dockerfile
@@ -9,17 +9,17 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["src/IdentityService.csproj", "src/IdentityApi/"]
+COPY ["src/IdentityApi/IdentityApi.csproj", "src/IdentityApi/"]
 RUN dotnet restore "src/IdentityApi/IdentityApi.csproj"
 COPY . .
-WORKDIR "/src/."
-RUN dotnet build "./IdentityService.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/IdentityApi"
+RUN dotnet build "./IdentityApi.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./IdentityService.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./IdentityApi.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "IdentityService.dll"]
+ENTRYPOINT ["dotnet", "IdentityApi.dll"]
