--- a/src/OrderApi/Dockerfile
+++ b/src/OrderApi/Dockerfile
@@ -1,5 +1,3 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER app
 WORKDIR /app
@@ -9,15 +7,15 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["src/OrderApi/OrderApi.csproj", "src/OrderApi/"]
-RUN dotnet restore "./src/OrderApi/OrderApi.csproj"
-COPY . .
-WORKDIR "/src/OrderApi"
-RUN dotnet build "./OrderApi.csproj" -c $BUILD_CONFIGURATION -o /app/build
+COPY src/OrderApi/OrderApi.csproj ./OrderApi/
+RUN dotnet restore ./OrderApi/OrderApi.csproj
+COPY src/OrderApi/. ./OrderApi/
+WORKDIR /src/OrderApi
+RUN dotnet build OrderApi.csproj -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./OrderApi.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish OrderApi.csproj -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
