--- a/deploy/grafana-dashboards-configmap.yaml
+++ b/deploy/grafana-dashboards-configmap.yaml
@@ -2,6 +2,11 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: grafana-dashboards
+  labels:
+    app: grafana
+    component: monitoring
+    type: dashboards
+    version: v1.0.0
 data:
   microservices-dashboard.json: |
     {
