--- a/deploy/menuapi-service.yaml
+++ b/deploy/menuapi-service.yaml
@@ -2,6 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: menuapi-service
+  labels:
+    app: menuapi
+    component: backend
+    service: menu
+    type: service
+    version: v1.0.0
 spec:
   selector:
     app: menuapi
