--- a/deploy/orderapi-configmap.yaml
+++ b/deploy/orderapi-configmap.yaml
@@ -2,6 +2,12 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: orderapi-config
+  labels:
+    app: orderapi
+    component: backend
+    service: order
+    type: config
+    version: v1.0.0
 data:
   ConnectionStrings__DefaultConnection: "Host=postgres-order;Port=5432;Database=fasttech_order;Username=fasttech;Password=fasttech123"
   RABBITMQ_HOST: "rabbitmq"
