--- a/deploy/orderapi-service.yaml
+++ b/deploy/orderapi-service.yaml
@@ -2,6 +2,12 @@ apiVersion: v1
 kind: Service
 metadata:
   name: orderapi-service
+  labels:
+    app: orderapi
+    component: backend
+    service: order
+    type: service
+    version: v1.0.0
 spec:
   selector:
     app: orderapi
