--- a/deploy/postgres-zabbix-deployment.yaml
+++ b/deploy/postgres-zabbix-deployment.yaml
@@ -2,6 +2,11 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: postgres-zabbix
+  labels:
+    app: postgres-zabbix
+    component: database
+    service: zabbix
+    version: v15.5
 spec:
   replicas: 1
   selector:
@@ -11,10 +16,13 @@ spec:
     metadata:
       labels:
         app: postgres-zabbix
+        component: database
+        service: zabbix
+        version: v15.5
     spec:
       containers:
       - name: postgres
-        image: postgres:15
+        image: postgres:15.5
         env:
         - name: POSTGRES_DB
           value: zabbix
