--- a/deploy/rabbitmq-deployment.yaml
+++ b/deploy/rabbitmq-deployment.yaml
@@ -2,6 +2,10 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: rabbitmq
+  labels:
+    app: rabbitmq
+    component: messaging
+    version: v3.12.8
 spec:
   replicas: 1
   selector:
@@ -11,10 +15,12 @@ spec:
     metadata:
       labels:
         app: rabbitmq
+        component: messaging
+        version: v3.12.8
     spec:
       containers:
       - name: rabbitmq
-        image: rabbitmq:3-management
+        image: rabbitmq:3.12.8-management
         ports:
         - containerPort: 5672
         - containerPort: 15672
