--- a/deploy/zabbix-agent-configmap.yaml
+++ b/deploy/zabbix-agent-configmap.yaml
@@ -2,6 +2,12 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: zabbix-monitor-scripts
+  labels:
+    app: zabbix-agent
+    component: monitoring
+    service: zabbix-agent
+    type: config
+    version: v7.4.0
 data:
   zabbix_agentd.conf: |
     LogFile=/tmp/zabbix_agentd.log
