--- a/deploy/zabbix-deployment.yaml
+++ b/deploy/zabbix-deployment.yaml
@@ -2,6 +2,11 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: zabbix-server
+  labels:
+    app: zabbix-server
+    component: monitoring
+    service: zabbix-server
+    version: v7.4.0
 spec:
   replicas: 1
   selector:
@@ -11,10 +16,13 @@ spec:
     metadata:
       labels:
         app: zabbix-server
+        component: monitoring
+        service: zabbix-server
+        version: v7.4.0
     spec:
       initContainers:
       - name: zabbix-db-init
-        image: zabbix/zabbix-server-pgsql:alpine-latest
+        image: zabbix/zabbix-server-pgsql:alpine-7.4.0
         command: ['sh', '-c']
         args:
         - |
@@ -35,7 +43,7 @@ spec:
           value: zabbix
       containers:
       - name: zabbix-server
-        image: zabbix/zabbix-server-pgsql:alpine-latest
+        image: zabbix/zabbix-server-pgsql:alpine-7.4.0
         ports:
         - containerPort: 10051
         env:
